# sfml-simple-game-engine

./: CMakeLists.txt  README.md
SFML/: SFML.sln
SFML/SMFL_Template/: SMFL_Template.vcxproj  SMFL_Template.vcxproj.filters  components.h  entityManager.h  game.cpp  main.cpp  movement.cpp  movement.h  multimedia.cpp  multimedia.h  random.cpp  timer.h  to.do  vec2d.cpp
SFML/SMFL_Template/x64/Debug/: SMFL_Template.exe.recipe  vc143.idb
SFML/SMFL_Template/x64/Debug/SMFL_Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SMFL_Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SFML/SMFL_Template/x64/Release/: SMFL_Template.exe.recipe  SMFL_Template.iobj  SMFL_Template.ipdb
SFML/SMFL_Template/x64/Release/SMFL_Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SMFL_Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: entity.h  entityManager.h  game.h  input.h  random.h  transform.h  vec2d.h
src/: components.cpp  entity.cpp  entityManager.cpp  multimedia.cpp  timer.cpp
